Add color modules

--- a/.docker_files/odoo.conf
+++ b/.docker_files/odoo.conf
@@ -1,15 +1,15 @@
 [options]
-addons_path = /mnt/extra-addons
+addons_path = /mnt/extra-addons,/mnt/third-party-addons
 csv_internal_sep = ,
 data_dir = /var/lib/odoo
 db_host = db
 db_maxconn = 64
-db_name = odoo
+db_name = dev
 db_password = odoo
 db_port = 5432
 db_template = template1
 db_user = odoo
-dbfilter = odoo
+dbfilter = dev
 demo = {}
 email_from = False
 geoip_database = /usr/share/GeoIP/GeoLiteCity.dat
