--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
   },
   "dependencies": {
     "babel-core": "^6.26.3",
-    "babel-loader": "^7.1.4"
+    "babel-loader": "^7.1.4",
+    "babel-preset-es2015": "^6.24.1"
   },
   "devDependencies": {
     "ava": "1.0.0-beta.5.1",
