--- a/.docker_files/package.json
+++ b/.docker_files/package.json
@@ -8,7 +8,7 @@
   },
   "ava": {
     "require": [
-      "./.ava/setupUnderscore.js"
+      "./ava/setupUnderscore.js"
     ],
     "babel": {
       "testOptions": {
@@ -21,7 +21,7 @@
   "dependencies": {
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.4",
-    "babel-preset-es2015": "^6.24.1"
+    "babel-preset-env": "^1.7.0"
   },
   "devDependencies": {
     "ava": "1.0.0-beta.5.1",
