--- a/.docker_files/odoo.conf
+++ b/.docker_files/odoo.conf
@@ -29,8 +29,8 @@ logfile = None
 logrotate = False
 longpolling_port = 8071
 max_cron_threads = 1
-osv_memory_age_limit = 1.0
-osv_memory_count_limit = False
+transient_age_limit = 1.0
+transient_count_limit = False
 pg_path = None
 pidfile = None
 proxy_mode = False
