TA#34955 add website_blog_internal addon (#66)
* Add module test_http_request as repo dependency

* add website_blog_internal addon

Co-authored-by: David Dufresne <27902736+ddufresne@users.noreply.github.com>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,9 +4,12 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
+      args:
+        - GIT_TOKEN=${GIT_TOKEN}
     volumes:
       - odoo-web-data:/var/lib/odoo
       - ./.log:/var/log/odoo
+      - ./website_blog_internal:/mnt/extra-addons/website_blog_internal
     ports:
       - "8069:8069"
       - "8071:8071"
