--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
     volumes:
       - odoo-web-data:/var/lib/odoo
       - ./.log:/var/log/odoo
-      - ./website_blog_internal:/mnt/extra-addons/website_blog_internal
+      - ./web_custom_modifier:/mnt/extra-addons/web_custom_modifier
     ports:
       - "8069:8069"
       - "8071:8071"
